--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -61,6 +61,9 @@
     .about-us-information-cta a:nth-child(2) {
         padding: 11px 25px;
     }
+    .cta-intro a {
+		display: none;
+    }
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
